# krust

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yaml
example/: deployment.yaml  multi-deployment.yaml
example/alpine-base/: Cargo.toml
example/alpine-base/src/: main.rs
example/hello-krust/: Cargo.toml
example/hello-krust/.cargo/: config.toml
example/hello-krust/src/: main.rs
example/k8s/: deployment.yaml  service.yaml
examples/: auto_auth_demo.rs
src/: constants.rs  lib.rs  main.rs  manifest.rs
src/auth/: keychain.rs  mod.rs  simple.rs  tests.rs
src/builder/: mod.rs  tests.rs
src/cli/: mod.rs
src/config/: mod.rs  tests.rs
src/image/: mod.rs  tests.rs
src/registry/: mod.rs  tests.rs
src/resolve/: mod.rs
src/service/: build.rs  mod.rs  platform.rs
tests/: auth_integration_test.rs  credential_helper_integration_test.rs  integration_test.rs  testscript_test.rs
tests/e2e/: basic_test.rs
tests/testdata/: alpine_platforms.txt  apply_basic.txt  auth_base64.txt  auth_credential_helper.txt  auth_docker_config_basic.txt  build_example.txt  build_requires_repo.txt  build_with_env.txt  build_with_image_flag.txt  clean_output.txt  custom_base_image.txt  multi_platform.txt  platform_detection.txt  platform_override.txt  resolve_basic.txt  resolve_dedup.txt  resolve_directory.txt  resolve_multi_document.txt  resolve_no_corruption.txt  single_platform.txt  verbose_logging.txt  version.txt  workspace_support.txt
