[package]
name = "krust"
version = "0.1.0"
edition = "2021"
authors = ["Jason Hall <imjasonh@gmail.com>"]
description = "A container image build tool for Rust applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imjasonh/krust"
keywords = ["container", "docker", "oci", "build", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5"
chrono = "0.4"
tar = "0.4"
flate2 = "1.0"
oci-distribution = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"
toml = "0.8"
which = "8.0"
tempfile = "3.9"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"
