[package]
name = "krust"
version = "0.1.0"
edition = "2021"
authors = ["Jason Hall <imjasonh@gmail.com>"]
description = "A container image build tool for Rust applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imjasonh/krust"
keywords = ["container", "docker", "oci", "build", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5"
chrono = "0.4"
tar = "0.4"
flate2 = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.0"
yaml-rust2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"
toml = "0.9"
which = "8.0"
tempfile = "3.9"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"
testscript-rs = "0.2"
